<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">News Cube</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_published">Date Published</string>
    <string name="source">Source</string>
    <string name="news_error">There is an error retrieving news.\nPlease try again.\nIf the problem persists, please let us know.</string>
    <string name="refresh">Refresh</string>
    <string name="news_list">News List</string>
    <string name="get_articles">Getting articles and comments</string>
    <string name="get_comments">Getting comments</string>
    <string name="get_tags">Getting tags</string>
    <string name="Asian_Age">Asian Age</string>
    <string name="BBC_India">BBC India</string>
    <string name="Central_Chronicle">Central Chronicle</string>
    <string name="CNN_IBN">CNN-IBN</string>
    <string name="DNA">DNA</string>
    <string name="Deccan_Herald">Deccan Herald</string>
    <string name="First_Post">First Post</string>
    <string name="Hindustan_Times">Hindustan Times</string>
    <string name="Hindu">Hindu</string>
    <string name="India_Today">India Today</string>
    <string name="Indian_Express">Indian Express</string>
    <string name="Mid_day">Mid-day</string>
    <string name="NDTV">NDTV</string>
    <string name="Outlook_India">Outlook India</string>
    <string name="Rediff">Rediff</string>
    <string name="Times_of_India">Times of India</string>
    <string name="Telegraph">Telegraph</string>
    <string name="Reuters_India">Reuters India</string>
    <string name="One_India">One India</string>
    <string name="Zee_news">Zee news</string>
    <string name="other_apps">My other apps</string>
    <string name="send_mail">Share News</string>
    <string name="rate_app">Rate App</string>
    <string name="tag">Tags</string>
    <string name="all_news">All News</string>
    <string name="latest_news">Latest News</string>
    <string name="trending_news">Trending News</string>
    <string name="overlay">Overlay</string>
    <string name="cancel">Cancel</string>
    <string name="close_button">Close</string>
    <string name="loading">Loading</string>
    <string name="sign_out">Click to sign out</string>
    <string name="signed_in">Signed in as</string>
    <string name="error_google">Error signing in with your google id. Please check your account settings and try again.</string>
    <string name="add_comment">Add comment</string>
    <string name="go">Go</string>
    <string name="comment_error">There is an error adding comment. Please try again.</string>
    <string name="log_out_in">Please log out and log back in.</string>
    <string name="resource_not_found">Resource not found, please try again or let us know about it.</string>
    <string name="put_error">Zoicks we have no idea what happened here. Sorry about that.</string>
    <string name="vote_up">Vote Up</string>
    <string name="sample_text"></string>
    <string name="reply">reply</string>
    <string name="success">Success</string>
    <string name="comment">comment</string>
    <string name="nothing_found">We looked and looked but found nothing</string>
    <string name="signing_in">Signing in</string>
    <string name="signing_out">Signing out</string>
    <string name="title_activity_comment_tree">CommentTreeActivity</string>
    <string name="no_comments">There are no comments so far.\n\nBe the first to comment on this issue.\n\nRotate the phone to portrait mode to read a summary of the article or swipe for the next article.</string>
    <string name="sign_in_comment">Sign in to comment</string>
    <string name="comments_rotate">Rotate the phone to landscape mode to view comments</string>

    <!-- Entertainment -->
    <string name="DNA_Entertainment">DNA</string>
    <string name="GlamSham">Glam Sham</string>
    <string name="Indian_Express_Entertainment">Indian Express</string>
    <string name="Mid_day_Entertainment">Mid day</string>
    <string name="Reuters_India_Entertainment">Reuters India</string>
    <string name="Times_of_India_Entertainment">Times of India</string>

    <!-- Technology -->
    <string name="Times_of_India_Tech">Times of India</string>
    <string name="Tech_India">Tech India</string>
    <string name="Tech_Tree">Tech Tree</string>
    <string name="BGR">Boy Genius Report</string>
    <string name="Indian_Express_Tech">Indian Express</string>

    <!-- Finance -->
    <string name="Business_Standard">Business Standard</string>
    <string name="Economic_Times_India">Economic Times</string>
    <string name="Live_Mint">Live Mint</string>
    <string name="Indian_Express_Finance">Indian Express</string>
    <string name="MoneyControl">MoneyControl</string>
    <string name="Hindustan_Times_Business">Hindustan Times</string>

    <!-- Sports -->
    <string name="Cricinfo">Cricinfo</string>
    <string name="CNN_IBN_Sports">CNN IBN</string>
    <string name="Indian_Express_Sports">Indian Express</string>
    <string name="Hindustan_Times_Sports">Hindustan Times</string>
    <string name="Times_of_India_Sports">Times of India</string>

</resources>