<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item 
	    android:id="@+id/tag"
	    android:showAsAction="always"
	    android:title="@string/tag"
	    android:icon="@drawable/labels"
	    />
	<item
        android:id="@+id/collections_list"
        android:showAsAction="always"
        android:title="@string/news_list"
        android:icon="@drawable/collections_list">
        
	    <menu>
	        <item android:id="@+id/trending_news" android:title="@string/trending_news" />
	        <item android:id="@+id/latest_news" android:title="@string/latest_news" />
            <item android:id="@+id/business_standard" android:title="@string/Business_Standard" />
            <item android:id="@+id/economic_times_india" android:title="@string/Economic_Times_India" />
            <item android:id="@+id/indian_express_finance" android:title="@string/Indian_Express_Finance" />
            <item android:id="@+id/live_mint" android:title="@string/Live_Mint" />
            <item android:id="@+id/money_control" android:title="@string/MoneyControl" />
            <item android:id="@+id/hindustan_times_business" android:title="@string/Hindustan_Times_Business" />
        </menu>
	</item>
	
    <item
        android:id="@+id/refresh"
        android:showAsAction="always"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"/>
    
	<item android:id="@+id/send_mail" android:title="@string/send_mail" android:icon="@drawable/email"/>
	<item android:id="@+id/rate_app" android:title="@string/rate_app" android:icon="@drawable/rating"/>

</menu>
