<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item 
	    android:id="@+id/tag"
	    android:showAsAction="always"
	    android:title="@string/tag"
	    android:icon="@drawable/labels"
	    />
	<item
        android:id="@+id/collections_list"
        android:showAsAction="always"
        android:title="@string/news_list"
        android:icon="@drawable/collections_list">
        
	    <menu>
	        <item android:id="@+id/trending_news" android:title="@string/trending_news" />
	        <item android:id="@+id/latest_news" android:title="@string/latest_news" />
            <item android:id="@+id/cricinfo" android:title="@string/Cricinfo" />
            <item android:id="@+id/cnn_ibn_sports" android:title="@string/CNN_IBN_Sports" />
            <item android:id="@+id/indian_express_sports" android:title="@string/Indian_Express_Sports" />
            <item android:id="@+id/hindustan_times_sports" android:title="@string/Hindustan_Times_Sports" />
            <item android:id="@+id/times_of_india_sports" android:title="@string/Times_of_India_Sports" />
        </menu>
	</item>
	
    <item
        android:id="@+id/refresh"
        android:showAsAction="always"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"/>
    
	<item android:id="@+id/send_mail" android:title="@string/send_mail" android:icon="@drawable/email"/>
	<item android:id="@+id/rate_app" android:title="@string/rate_app" android:icon="@drawable/rating"/>

</menu>
