<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comments_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17"
        android:background="@drawable/title_border"
        android:gravity="center"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date_published1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray"
            android:text="@string/sample_text"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textScaleX="0.5"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/website1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray"
            android:text="@string/sample_text"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textScaleX="0.5"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/news_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/sign_in_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_comment"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textStyle="italic" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75" >

        <LinearLayout
            android:id="@+id/scroll_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView 
                android:id="@+id/no_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_comments"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>