<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:background="@drawable/title_border"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:padding="10dp" >

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/date_published_footer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/date_published"
            android:textColor="@color/black"
            android:textScaleX="0.5" />

        <TextView
            android:id="@+id/date_published1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="40dp"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textScaleX="0.5" />
        
        <TextView
            android:id="@+id/comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:gravity="right"
            android:text="@string/sample_text"
            android:textColor="@color/blue"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/website_footer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/source"
            android:textColor="@color/black"
            android:textScaleX="0.5" />

        <TextView
            android:id="@+id/website1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textScaleX="0.5" />

    </LinearLayout>

</LinearLayout>